simplified tests to cover all methods, check business logic for in and output options